--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/webbshop_grupparbete
-spring.datasource.username=simon
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/webshop_grupparbete
+spring.datasource.username=ramtin
+spring.datasource.password=password123
