Created POST-Method in Kund Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/webshop_grupparbete
 spring.datasource.username=ramtin
 spring.datasource.password=password123
+spring.datasource.timeBetweenEvictionRunsMillis = 60000
